# kiv-opswi

./: .gitignore  ImageRecord.cpp  ImageRecord.h  Line.cpp  Line.h  Main.cpp  README.md  ROISelector.cpp  ROISelector.h  Source.cpp  XMLParser.cpp  XMLParser.h  api.h
cnn/: full_dataset_roi_a_radius.pyw  full_dataset_roi_b.pyw  full_dataset_roi_b_radius.pyw  full_dataset_roi_c_radius.pyw  full_dataset_roi_d_radius.pyw  full_dataset_roi_e_radius.pyw  full_dataset_roi_f_radius.pyw  full_dataset_roi_g_radius.pyw  full_dataset_roi_h_radius.pyw  full_dataset_roi_i_radius.pyw  myscript.pyw  myscript_non_visualization.pyw
cnns/: README  full_dataset_roi_a.pyw  full_dataset_roi_a_radius.pyw  full_dataset_roi_b_radius.pyw  full_dataset_roi_c_radius.pyw  full_dataset_roi_d_radius.pyw  full_dataset_roi_e_radius.pyw  full_dataset_roi_f_radius.pyw  full_dataset_roi_g_radius.pyw  full_dataset_roi_h_radius.pyw  full_dataset_roi_i_radius.pyw  myscript.pyw  only_positive_train.pyw
recognizer/: README  README.txt  cnn_runner.py  cnn_runner.pyw  data_loader.py  data_loader.pyw  error.py  error.pyw  evaluation_data.py  evaluation_data.pyw  neural_networks.py  neural_networks.pyw  record.py  record.pyw  run.py  run.pyw
recognizer/data/ABoard/a/: model.json
recognizer/data/ABoard/b/: model.json
recognizer/data/ABoard/c/: model.json
recognizer/data/ABoard/d/: model.json
recognizer/data/ABoard/e/: model.json
recognizer/data/ABoard/f/: model.json
recognizer/data/ABoard/g/: model.json
roi_selector/: CMakeLists.txt  ImageRecord.cpp  README  ROISelector.cpp  ROISelector.h  main.cpp
(+2 files in other folders)
